--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="row no-gutters popup-gallery">
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="http://www.coderschool.vn" target="_blank">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+                        <img class="img-fluid" src="1.jpg" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -139,7 +139,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="https://www.wordpress.org" target="_blank">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+                        <img class="img-fluid" src="2.jpg" alt="">
                         <div class="portfolio-box-caption">
                           <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -154,7 +154,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                       <a class="portfolio-box" href="https://www.spotify.com" target="_blank">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+                        <img class="img-fluid" src="3.jpg" alt="">
                         <div class="portfolio-box-caption">
                           <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -169,7 +169,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                       <a class="portfolio-box" href="https://www.ls-site.ga" target="_blank">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+                        <img class="img-fluid" src="4.jpg" alt="">
                         <div class="portfolio-box-caption">
                           <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -184,7 +184,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                       <a class="portfolio-box" href="https://www.guardianofyourwallet.weebly.com" target="_blank">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+                        <img class="img-fluid" src="5.jpg" alt="">
                         <div class="portfolio-box-caption">
                           <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -199,7 +199,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                       <a class="portfolio-box" href="https://www.grab.com" target="_blank">
-                        <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+                        <img class="img-fluid" src="6.jpg" alt="">
                         <div class="portfolio-box-caption">
                           <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
