--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                       </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                      <a class="portfolio-box" href="https://www.ls-site.ga" target="_blank">
+                      <a class="portfolio-box" href="https://www.ls-site.ml" target="_blank">
                         <img class="img-fluid" src="4.jpg" alt="">
                         <div class="portfolio-box-caption">
                           <div class="portfolio-box-caption-content">
